Adapt to Java 17 and 21 (#72)
Co-authored-by: Sebastian Bär <redcatbear@ursus-minor.de>
Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>
Co-authored-by: kaklakariada <christoph@users.sourceforge.net>